Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <h2>Testing this oot</h2>
 
         <section id="downloads">
-          <a href="https://github.com/Stusandbox/repoman/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/Stusandbox/repoman/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/Stusandbox/repoman" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+          <a href="https://github.com/Stusandbox/OpenWireless/zipball/master" class="btn">Download as .zip</a>
+          <a href="https://github.com/Stusandbox/OpenWireless/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://github.com/Stusandbox/OpenWireless" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
       </div>
     </header>
