Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
 
-    <title>Repoman by Stusandbox</title>
+    <title>EFF - Open Wireless Project by TWEFF</title>
   </head>
 
   <body>
 
     <header>
       <div class="container">
-        <h1>Repoman</h1>
-        <h2>Testing this oot</h2>
+        <h1>EFF - Open Wireless Project</h1>
+        <h2>Imagine a future with ubiquitous open Internet.</h2>
 
         <section id="downloads">
-          <a href="https://github.com/Stusandbox/OpenWireless/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/Stusandbox/OpenWireless/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/Stusandbox/OpenWireless" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+          <a href="https://github.com/TWEFF/OpenWireless/zipball/master" class="btn">Download as .zip</a>
+          <a href="https://github.com/TWEFF/OpenWireless/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://github.com/TWEFF/OpenWireless" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
       </div>
     </header>
@@ -29,9 +29,16 @@
     <div class="container">
       <section id="main_content">
         <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a name="welcome-to-the-open-wireless-movement-github-page" class="anchor" href="#welcome-to-the-open-wireless-movement-github-page"><span class="octicon octicon-link"></span></a>Welcome to the Open Wireless Movement GitHub page</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>We envision a world where, in any urban environment:</p>
+
+<ul>
+<li>Dozens of open networks are available at your fingertips.</li>
+<li>Tablets, watches, and other new devices can automatically join these networks to do nifty things.</li>
+<li>The societal expectation is one of sharing, and, as a result, wireless Internet is more efficient.</li>
+<li>The false notion that an IP address could be used as a sole identifier is finally a thing of the past, creating a privacy-enhancing norm of shared networks.</li>
+</ul><p>We're working with a coalition of volunteer engineers to build technologies that will let users open their wireless networks without compromising their security or sacrificing bandwidth. And we're working with advocates to help change the way people and businesses think about Internet service. </p>
 
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
