--- a/spikes/index.html
+++ b/spikes/index.html
@@ -38,12 +38,14 @@
 
 		var library = $('#library').val();
 		var method = $('#method').val();
-		var params = $('#param').val().split(" ");
+		var params = $('#param').val();
+    var paramArray = [];
+    paramArray.push(params);
 
 		var request = {
 			"jsonrpc": "2.0",
 			"method": method,
-			"params": params,
+			"params": paramArray,
 			"id": 1
 		}
 
@@ -57,7 +59,9 @@
 			type: "POST",
 			url: url,
 			data: JSON.stringify(request),
-			success: showResult
+			success: showResult,
+			contentType: "application/json",
+			dataType: "json"
 		});
 		return false;
 	}
@@ -67,16 +71,16 @@
 <body>
 	<form onsubmit="return getAuthToken();" method="POST">
 		Username: <input type="text" value="root" id="username"></input><br>
-		Password: <input type="text" value="password" id="password"></input><br>
+		Password: <input type="text" value="asdf1234" id="password"></input><br>
 		<input type="submit" value="Submit"></input>
 	</form><br>
 	Token: <input id="authToken" type="text"></input>
 </body>
 <hr><br>
 <form onsubmit="return execJSON();" method="POST">
-	Library: <input type="text" id="library"></input><br>
-	Method: <input type="text" id="method"></input><br>
-	param: <input type="text" id="param"></input><br>
+	Library: <input type="text" id="library" value="sys"></input><br>
+	Method: <input type="text" id="method" value="exec"></input><br>
+	param: <input type="text" id="param" value="/usr/bin/luci-bwc -i eth0"></input><br>
 	<input type="submit" value="Submit"></input>
 </form>
 RESULT: <input id="result" type="text" style="width:500px; height:50px;"></input>
