--- a/spikes/index.html
+++ b/spikes/index.html
@@ -32,7 +32,7 @@
 		});
 
 		return false;
-	}
+	};
 
 	function execJSON() {
 
@@ -64,7 +64,35 @@
 			dataType: "json"
 		});
 		return false;
-	}
+	};
+
+  function setSSID() {
+    var ssid = $('#ssid').val();
+    var ssidArray = [];
+    ssidArray.push("wireless.@wifi-iface[0].ssid="+ssid);
+    var ssidRequest = {
+        "jsonrpc": "2.0",
+        "method": "set",
+        "params": ssidArray,
+        "id": 1
+    }
+
+		var uciUrl = "http://192.168.1.1/cgi-bin/luci/rpc/uci?auth=" + authorizationToken;
+    
+		var showSSIDResult = function (response){
+			$('#newSSID').val(response.result);
+		}
+		
+    $.ajax({
+			type: "POST",
+			url: uciUrl,
+			data: JSON.stringify(ssidRequest),
+			success: showSSIDResult,
+			contentType: "application/json",
+			dataType: "json"
+		});
+		return false;
+  };
 
 	</script>
 </head>
@@ -83,5 +111,11 @@
 	param: <input type="text" id="param" value="/usr/bin/luci-bwc -i eth0"></input><br>
 	<input type="submit" value="Submit"></input>
 </form>
-RESULT: <input id="result" type="text" style="width:500px; height:50px;"></input>
+RESULT: <input id="result" type="text" style="width:500px; height:50px;"></input><br>
+<hr><br>
+<form onSubmit="return setSSID();" method="POST">
+  SSID: <input type="text" id="ssid" value="openWireless"></input><br>
+  <input type="submit" value="Submit"></input><br>
+</form>
+New SSID: <input id="newSSID" type="text"></input>
 </html>
