--- a/app/changePassword.html
+++ b/app/changePassword.html
@@ -4,4 +4,11 @@
 		<!-- <script src="../lib/jquery-2.1.0.min.js"></script> -->
 		<script type="text/javascript" src="openWireless.js"></script>
 	</head>
+	<body>
+		<form onsubmit="return changePassword();" method="POST">
+			New password: <input type="password" value="qwerty" id="password1"></input><br>
+			Retype new Password: <input type="password" value="qwerty" id="password2"></input><br>
+			<input type="submit" value="Submit"></input>
+		</form><br>
+	</body>
 </html>
