--- a/app/setSSID.html
+++ b/app/setSSID.html
@@ -10,7 +10,7 @@
 			New SSID: <input type="text" value="myPrivateNetwork" id="ssid"></input><br>
 			<input type="submit" value="Submit"></input>
 		</form><br>
-		Token: <input id="authToken" type="text"></input>
+		Updated SSID: <input id="updatedSSID" type="text"></input>
 		<hr><br>
 	</body>
 </html>
