Setting the password field as password on login

--- a/app/login.html
+++ b/app/login.html
@@ -8,7 +8,7 @@
 	<body>
 		<form onsubmit="return login();" method="POST">
 			Username: <input type="text" value="root" id="username"></input><br>
-			Password: <input type="text" value="asdf1234" id="password"></input><br>
+			Password: <input type="password" value="asdf1234" id="password"></input><br>
 			<input type="submit" value="Submit"></input>
 		</form><br>
 		Token: <input id="authToken" type="text"></input>
