Restructing the files. Added validation to change password page

--- a/app/html/changePassword.html
+++ b/app/html/changePassword.html
@@ -2,10 +2,10 @@
 	<head>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
 		<!-- <script src="../lib/jquery-2.1.0.min.js"></script> -->
-		<script type="text/javascript" src="openWireless.js"></script>
+		<script type="text/javascript" src="../js/checkPassword.js"></script>
 	</head>
 	<body>
-		<form onsubmit="return changePassword();" method="POST">
+		<form onsubmit="return checkForm(this);" method="POST">
 			New password: <input type="password" value="qwerty" id="password1"></input><br>
 			Retype new Password: <input type="password" value="qwerty" id="password2"></input><br>
 			<input type="submit" value="Submit"></input>
