--- a/jasmine/index.html
+++ b/jasmine/index.html
@@ -13,7 +13,7 @@
   <!-- include source files here... -->
   <script type="text/javascript" src="lib/jquery-2.1.0.min.js"></script>
   <!-- <script type="text/javascript" src="../spikes/spike.js" data-cover></script> -->
-  <script type="text/javascript" src="../app/openWireless.js" data-cover></script>
+  <script type="text/javascript" src="../app/js/openWireless.js" data-cover></script>
 
   <!-- include spec files here... -->
   <!-- <script type="text/javascript" src="spikeSpec.js"></script> -->
