--- a/app/html/login.html
+++ b/app/html/login.html
@@ -2,7 +2,7 @@
 	<head>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
 		<!-- <script src="../lib/jquery-2.1.0.min.js"></script> -->
-		<script type="text/javascript" src="openWireless.js"></script>
+		<script type="text/javascript" src="../js/openWireless.js"></script>
 	</head>
 
 	<body>
