--- a/app/html/changePassword.html
+++ b/app/html/changePassword.html
@@ -5,9 +5,9 @@
 		<script type="text/javascript" src="../js/checkPassword.js"></script>
 	</head>
 	<body>
-		<form onsubmit="return checkForm(this);" method="POST">
-			New password: <input type="password" value="qwerty" id="password1"></input><br>
-			Retype new Password: <input type="password" value="qwerty" id="password2"></input><br>
+		<form onsubmit="return checkForm();" method="POST">
+			New password: <input type="password" value="qwerty" id="newPassword"></input><br>
+			Retype new Password: <input type="password" value="qwerty" id="retypePassword"></input><br>
 			<input type="submit" value="Submit"></input>
 		</form><br>
 	</body>
