Adding basic style

--- a/app/html/changePassword.html
+++ b/app/html/changePassword.html
@@ -1,15 +1,19 @@
 <html>
 	<head>
+		<link rel="stylesheet" type="text/css" href="../css/style.css" media="screen" />
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
 		<!-- <script src="../lib/jquery-2.1.0.min.js"></script> -->
 		<script type="text/javascript" src="../js/checkPassword.js"></script>
 		<script type="text/javascript" src="../js/openWireless.js"></script>
 	</head>
 	<body>
-		<form onsubmit="return checkForm();" method="POST">
-			New password: <input type="password" value="qwerty" id="newPassword"></input><br>
-			Retype new Password: <input type="password" value="qwerty" id="retypePassword"></input><br>
-			<input type="submit" value="Submit"></input>
-		</form><br>
+		<div id="outerContainer">
+			<div id="header"></div>
+			<form onsubmit="return checkForm();" method="POST">
+				New password: <input type="password" value="qwerty" id="newPassword"></input><br>
+				Retype new Password: <input type="password" value="qwerty" id="retypePassword"></input><br>
+				<input type="submit" value="Submit"></input>
+			</form>
+		</div>
 	</body>
 </html>
