--- a/app/html/login.html
+++ b/app/html/login.html
@@ -1,17 +1,19 @@
 <html>
 	<head>
+		<link rel="stylesheet" type="text/css" href="../css/style.css" media="screen" />
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
 		<!-- <script src="../lib/jquery-2.1.0.min.js"></script> -->
 		<script type="text/javascript" src="../js/openWireless.js"></script>
 	</head>
 
 	<body>
-		<form onsubmit="return login();" method="POST">
-			Username: <input type="text" value="root" id="username"></input><br>
-			Password: <input type="password" value="asdf1234" id="password"></input><br>
-			<input type="submit" value="Submit"></input>
-		</form><br>
-		Token: <input id="authToken" type="text"></input>
-		<hr><br>
+		<div id="outerContainer">
+			<div id="header"></div>
+			<form onsubmit="return login();" method="POST">
+				Username: <input type="text" value="root" id="username"></input><br>
+				Password: <input type="password" value="asdf1234" id="password"></input><br>
+				<input type="submit" value="Submit"></input>
+			</form>
+		</div>
 	</body>
 </html>
