A few minor style changes

--- a/app/html/changePassword.html
+++ b/app/html/changePassword.html
@@ -9,11 +9,14 @@
 	<body>
 		<div id="outerContainer">
 			<div id="header"></div>
-			<form onsubmit="return checkForm();" method="POST">
-				New password: <input type="password" value="qwerty" id="newPassword"></input><br>
-				Retype new Password: <input type="password" value="qwerty" id="retypePassword"></input><br>
-				<input type="submit" value="Submit"></input>
-			</form>
+			<div class="formDiv">
+				<h1>Change your password</h1>
+				<form onsubmit="return checkForm();" method="POST">
+					New password: <input type="password" value="qwerty" id="newPassword"></input><br>
+					Retype new Password: <input type="password" value="qwerty" id="retypePassword"></input><br>
+					<input type="submit" value="Submit"></input>
+				</form>
+			</div>
 		</div>
 	</body>
 </html>
