--- a/app/html/login.html
+++ b/app/html/login.html
@@ -9,11 +9,14 @@
 	<body>
 		<div id="outerContainer">
 			<div id="header"></div>
-			<form onsubmit="return login();" method="POST">
-				Username: <input type="text" value="root" id="username"></input><br>
-				Password: <input type="password" value="asdf1234" id="password"></input><br>
-				<input type="submit" value="Submit"></input>
-			</form>
+			<div class="formDiv">
+				<h1>Login</h1>
+				<form onsubmit="return login();" method="POST">
+					Username: <input type="text" value="root" id="username"></input><br>
+					Password: <input type="password" value="asdf1234" id="password"></input><br>
+					<input type="submit" value="Submit"></input>
+				</form>
+			</div>
 		</div>
 	</body>
 </html>
