--- a/app/html/changePassword.html
+++ b/app/html/changePassword.html
@@ -12,8 +12,9 @@
 			<div class="formDiv">
 				<h1>Change your password</h1>
 				<form onsubmit="return checkForm();" method="POST">
-					New password: <input type="password" value="qwerty" id="newPassword"></input><br>
-					Retype new Password: <input type="password" value="qwerty" id="retypePassword"></input><br>
+					New password: <input type="password" id="newPassword" required pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{12,}" onchange="this.setCustomValidity(this.validity.patternMismatch ? 'Password must contain at least 12 characters, including UPPER/lowercase and numbers' : '');
+  					if(this.checkValidity()) form.retypePassword.pattern = this.value;"></input><br>
+					Retype new Password: <input type="password" id="retypePassword" required pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{12,}" onchange="this.setCustomValidity(this.validity.patternMismatch ? 'Please enter the same Password as above' : '');"></input><br>
 					<input type="submit" value="Submit"></input>
 				</form>
 			</div>
