Added Jasmine-fixture and cleaned up specs

--- a/jasmine/index.html
+++ b/jasmine/index.html
@@ -7,11 +7,12 @@
   <link rel="stylesheet" type="text/css" href="lib/jasmine-1.3.1/jasmine.css">
   <script type="text/javascript" src="lib/jasmine-1.3.1/jasmine.js"></script>
   <script type="text/javascript" src="lib/jasmine-1.3.1/jasmine-html.js"></script>
+  <script type="text/javascript" src="lib/jquery-2.1.0.min.js"></script>
+  <script type="text/javascript" src="lib/jasmine-fixture.min.js"></script>
 
   <!-- <script type="text/javascript" src="lib/blanket.min.js" data-cover-adapter="lib/jasmine-blanket.js"></script> -->
 
   <!-- include source files here... -->
-  <script type="text/javascript" src="lib/jquery-2.1.0.min.js"></script>
   <!-- <script type="text/javascript" src="../spikes/spike.js" data-cover></script> -->
   <script type="text/javascript" src="../app/js/openWireless.js" data-cover></script>
   <script type="text/javascript" src="../app/js/checkPassword.js" data-cover></script>
