Added a little structure to Jasmine specs

--- a/jasmine/index.html
+++ b/jasmine/index.html
@@ -10,17 +10,13 @@
   <script type="text/javascript" src="lib/jquery-2.1.0.min.js"></script>
   <script type="text/javascript" src="lib/jasmine-fixture.min.js"></script>
 
-  <!-- <script type="text/javascript" src="lib/blanket.min.js" data-cover-adapter="lib/jasmine-blanket.js"></script> -->
-
   <!-- include source files here... -->
-  <!-- <script type="text/javascript" src="../spikes/spike.js" data-cover></script> -->
   <script type="text/javascript" src="../app/js/openWireless.js" data-cover></script>
   <script type="text/javascript" src="../app/js/checkPassword.js" data-cover></script>
 
   <!-- include spec files here... -->
-  <!-- <script type="text/javascript" src="spikeSpec.js"></script> -->
-  <script type="text/javascript" src="openWirelessSpec.js"></script>
-  <script type="text/javascript" src="checkPasswordSpec.js"></script>
+  <script type="text/javascript" src="integration/openWirelessSpec.js"></script>
+  <script type="text/javascript" src="integration/changePasswordSpec.js"></script>
 
   <script type="text/javascript">
     (function() {
