--- a/app/html/login.html
+++ b/app/html/login.html
@@ -12,8 +12,8 @@
 			<div class="formDiv">
 				<h1>Login</h1>
 				<form onsubmit="return login();" method="POST">
-					Username: <input type="text" value="root" id="username"></input><br>
-					Password: <input type="password" value="asdf1234" id="password"></input><br>
+					<input type="text" placeholder="Username" id="username"></input><br>
+					<input type="password" placeholder="Password" id="password"></input><br>
 					<input type="submit" value="Submit"></input>
 				</form>
 			</div>
