Yay the style is black now! How pretty! Also the changepassword form is fixed

--- a/app/html/changePassword.html
+++ b/app/html/changePassword.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<div id="outerContainer">
-			<div id="header"></div>
+			<header></header>
 			<div class="formDiv">
 				<h1>Change your password</h1>
 				<form onsubmit="return checkForm();" method="POST">
