--- a/app/html/setSSID.html
+++ b/app/html/setSSID.html
@@ -8,7 +8,7 @@
 
 	<body>
 		<div id="outerContainer">
-			<div id="header"></div>
+			<header></header>
 			<div class="formDiv">
 				<h1>Set the SSID</h1>
 				<p>This is the SSID for your personal use. It is what you will see when you connect to the wireless.</p>
