--- a/app/html/login.html
+++ b/app/html/login.html
@@ -7,16 +7,14 @@
 	</head>
 
 	<body>
-		<div id="outerContainer">
-			<div id="header"></div>
-			<div class="formDiv">
-				<h1>Login</h1>
-				<form onsubmit="return login();" method="POST">
-					<input type="text" placeholder="Username" id="username"></input><br>
-					<input type="password" placeholder="Password" id="password"></input><br>
-					<input type="submit" value="Submit"></input>
-				</form>
-			</div>
+		<header></header>
+		<div class="formDiv">
+			<h1>Openwireless</h1>
+			<form onsubmit="return login();" method="POST">
+				<input type="text" placeholder="Username" id="username"></input><br>
+				<input type="password" placeholder="Password" id="password"></input><br>
+				<input type="submit" value="Submit"></input>
+			</form>
 		</div>
 	</body>
 </html>
