Adding validation to username/password field

--- a/app/html/login.html
+++ b/app/html/login.html
@@ -11,9 +11,9 @@
 		<div class="formDiv">
 			<h1>Openwireless</h1>
 			<form onsubmit="return login();" method="POST">
-				<input type="text" placeholder="Username" id="username"></input><br>
-				<input type="password" placeholder="Password" id="password"></input><br>
-				<input type="submit" value="Submit"></input>
+				<input type="text" placeholder="Username" id="username" required/><br>
+				<input type="password" placeholder="Password" id="password" required/><br>
+				<input type="submit" value="Submit"/>
 			</form>
 		</div>
 	</body>
