First pass at removing inline javascript events and discuss with team

--- a/app/html/login.html
+++ b/app/html/login.html
@@ -10,7 +10,7 @@
 		<header></header>
 		<div class="formDiv">
 			<h1>Openwireless</h1>
-			<form onsubmit="return login();" method="POST">
+			<form>
 				<input type="text" placeholder="Username" id="username" required/><br>
 				<input type="password" placeholder="Password" id="password" required/><br>
 				<input type="submit" value="Submit"/>
