--- a/jasmine/index.html
+++ b/jasmine/index.html
@@ -15,6 +15,7 @@
   <script type="text/javascript" src="../app/js/checkPassword.js" data-cover></script>
 
   <!-- include spec files here... -->
+  <script type="text/javascript" src="integration/loginSpec.js"></script>
   <script type="text/javascript" src="integration/openWirelessSpec.js"></script>
   <script type="text/javascript" src="integration/changePasswordSpec.js"></script>
 
