--- a/app/html/setSSID.html
+++ b/app/html/setSSID.html
@@ -17,17 +17,12 @@
 					<input type="submit" value="Submit"></input>
 				</form>
 			</div>
-
-			<div class="updating" style="display:none;">
-				<h1>Updating</h1>
-				<p>When the update completes, your router will restart.</p>
-			</div>
-
-			<div class="restarting" style="display:none;">
+			<div id="restarting" style="display:none;">
 				<h1>Restarting</h1>
-				<p>Update successful &#x2713;<br>Your router is now restarting. When it reboots, connect your device to the new wireless network.</p>
+				<p>SSID update successful &#x2713;<br>Your router is now restarting. When it reboots, connect your device to the new wireless network.</p>
 			</div>
-			<div class="restartSuccess" style="display:none;"></div>
+			<div id="restartSuccess" style="display:none;">
+			</div>
 		</div>
 	</body>
 </html>
