--- a/app/html/changePassword.html
+++ b/app/html/changePassword.html
@@ -4,7 +4,7 @@
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
 		<!-- <script src="../lib/jquery-2.1.0.min.js"></script> -->
 		<script type="text/javascript" src="../js/checkPassword.js"></script>
-		<script type="text/javascript" src="../js/openWireless.js"></script>
+		<script type="text/javascript" src="../js/login.js"></script>
 	</head>
 	<body>
 		<div id="outerContainer">
