Using local jQuery in event that there is no internet connection

--- a/app/html/setSSID.html
+++ b/app/html/setSSID.html
@@ -1,8 +1,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="../css/style.css" media="screen" />
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
-		<!-- <script src="../lib/jquery-2.1.0.min.js"></script> -->
+    <script src="../lib/jquery-2.1.0.min.js"></script>
 		<script type="text/javascript" src="../js/login.js"></script>
 		<script type="text/javascript" src="../js/openWireless.js"></script>
 	</head>
