--- a/app/html/login.html
+++ b/app/html/login.html
@@ -1,8 +1,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="../css/style.css" media="screen" />
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
-		<!-- <script src="../lib/jquery-2.1.0.min.js"></script> -->
+    <script src="../lib/jquery-2.1.0.min.js"></script>
 		<script type="text/javascript" src="../js/login.js"></script>
 	</head>
 
@@ -10,7 +9,7 @@
 		<header></header>
 		<div class="formDiv">
 			<h1>Openwireless</h1>
-            <form onsubmit="return login();" method="POST">
+      <form>
 				<input type="text" placeholder="Username" id="username" required/><br>
 				<input type="password" placeholder="Password" id="password" required/><br>
 				<input type="submit" value="Submit"/>
