Converted change password page to Jquery binding Introduced some code duplication that will need to be refactored

--- a/app/html/changePassword.html
+++ b/app/html/changePassword.html
@@ -3,14 +3,13 @@
 		<link rel="stylesheet" type="text/css" href="../css/style.css" media="screen" />
     <script src="../lib/jquery-2.1.0.min.js"></script>
 		<script type="text/javascript" src="../js/checkPassword.js"></script>
-		<script type="text/javascript" src="../js/login.js"></script>
 	</head>
 	<body>
 		<div id="outerContainer">
 			<header></header>
 			<div class="formDiv">
 				<h1>Change your password</h1>
-				<form onsubmit="return checkForm();" method="POST">
+				<form>
 					New password: <input type="password" id="newPassword" required pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{12,}" onchange="this.setCustomValidity(this.validity.patternMismatch ? 'Password must contain at least 12 characters, including UPPER/lowercase and numbers' : '');
   					if(this.checkValidity()) form.retypePassword.pattern = this.value;"></input><br>
 					Retype new Password: <input type="password" id="retypePassword" required pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{12,}" onchange="this.setCustomValidity(this.validity.patternMismatch ? 'Please enter the same Password as above' : '');"></input><br>
