Converted SSID page SSID request generates error in LUCI bindings.

--- a/app/html/setSSID.html
+++ b/app/html/setSSID.html
@@ -2,8 +2,7 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="../css/style.css" media="screen" />
     <script src="../lib/jquery-2.1.0.min.js"></script>
-		<script type="text/javascript" src="../js/login.js"></script>
-		<script type="text/javascript" src="../js/openWireless.js"></script>
+		<script type="text/javascript" src="../js/ssid.js"></script>
 	</head>
 
 	<body>
@@ -12,7 +11,7 @@
 			<div class="formDiv">
 				<h1>Set the SSID</h1>
 				<p>This is the SSID for your personal use. It is what you will see when you connect to the wireless.</p>
-				<form onsubmit="return setSSID();" method="POST">
+				<form>
 					<input type="text" placeholder="New SSID" id="ssid"></input><br>
 					<input type="submit" value="Submit"></input>
 				</form>
