--- a/jasmine/index.html
+++ b/jasmine/index.html
@@ -12,12 +12,12 @@
 
   <!-- include source files here... -->
   <script type="text/javascript" src="../app/js/login.js" data-cover></script>
-  <script type="text/javascript" src="../app/js/openWireless.js" data-cover></script>
+  <script type="text/javascript" src="../app/js/ssid.js" data-cover></script>
   <script type="text/javascript" src="../app/js/checkPassword.js" data-cover></script>
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="integration/loginSpec.js"></script>
-  <script type="text/javascript" src="integration/openWirelessSpec.js"></script>
+  <script type="text/javascript" src="integration/ssidSpec.js"></script>
   <script type="text/javascript" src="integration/changePasswordSpec.js"></script>
 
   <script type="text/javascript">
