Added a couple unit tests as examples

--- a/jasmine/index.html
+++ b/jasmine/index.html
@@ -19,6 +19,7 @@
   <script type="text/javascript" src="integration/loginSpec.js"></script>
   <script type="text/javascript" src="integration/ssidSpec.js"></script>
   <script type="text/javascript" src="integration/changePasswordSpec.js"></script>
+  <script type="text/javascript" src="unit/genericSpec.js"></script>
 
   <script type="text/javascript">
     (function() {
