--- a/app/html/changePassword.html
+++ b/app/html/changePassword.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="../css/style.css" media="screen" />
@@ -10,9 +11,10 @@
 			<div class="formDiv">
 				<h1>Change your password</h1>
 				<form>
-					New password: <input type="password" id="newPassword" required pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{12,}" onchange="this.setCustomValidity(this.validity.patternMismatch ? 'Password must contain at least 12 characters, including UPPER/lowercase and numbers' : '');
-  					if(this.checkValidity()) form.retypePassword.pattern = this.value;"></input><br>
-					Retype new Password: <input type="password" id="retypePassword" required pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{12,}" onchange="this.setCustomValidity(this.validity.patternMismatch ? 'Please enter the same Password as above' : '');"></input><br>
+					<input type="password" id="newPassword" placeholder="New password"></input><br>
+					<div id="newPasswordError" class="inputError" style="display:none;"></div>
+					<input type="password" id="retypePassword" placeholder="Retype new password"></input><br>
+					<div id="retypePasswordError" class="inputError" style="display:none;"></div>
 					<input type="submit" value="Submit"></input>
 				</form>
 			</div>
