--- a/app/html/login.html
+++ b/app/html/login.html
@@ -9,9 +9,11 @@
 		<header></header>
 		<div class="formDiv">
 			<h1>Openwireless</h1>
-      <form>
-				<input type="text" placeholder="Username" id="username" required/><br>
-				<input type="password" placeholder="Password" id="password" required/><br>
+            <form>
+				<input type="text" placeholder="Username" id="username"/><br>
+                <div id="usernameError" class="inputError" style="display:none;"></div>
+				<input type="password" placeholder="Password" id="password"/><br>
+                <div id="passwordError" class="inputError" style="display:none;"></div>
 				<input type="submit" value="Submit"/>
 			</form>
 		</div>
