Adding generic error when login fails. Jasmine tests to handle ajax success and error conditions

--- a/app/html/login.html
+++ b/app/html/login.html
@@ -10,7 +10,8 @@
 		<div class="formDiv">
 			<h1>Openwireless</h1>
             <form>
-				<input type="text" placeholder="Username" id="username"/><br>
+                <div id="genericError" class="inputError" style="display:none;"></div>
+                <input type="text" placeholder="Username" id="username"/><br>
                 <div id="usernameError" class="inputError" style="display:none;"></div>
 				<input type="password" placeholder="Password" id="password"/><br>
                 <div id="passwordError" class="inputError" style="display:none;"></div>
