--- a/app/html/setSSID.html
+++ b/app/html/setSSID.html
@@ -13,6 +13,9 @@
 				<p>This is the SSID for your personal use. It is what you will see when you connect to the wireless.</p>
 				<form>
 					<input type="text" placeholder="New SSID" id="ssid"></input><br>
+					<div id="ssidError" class="inputError" style="display:none;"></div>
+					<input type="text" placeholder="Passphrase" id="ssidPassphrase"></input><br>
+					<div id="ssidPassphraseError" class="inputError" style="display:none;"></div>
 					<input type="submit" value="Submit"></input>
 				</form>
 			</div>
