--- a/app/html/dashboard.html
+++ b/app/html/dashboard.html
@@ -1,8 +1,9 @@
 <html>
   <head>
-    <link rel="stylesheet" href="style.css" />
-    <script src="../../app/lib/jquery-2.1.0.min.js"></script>
-    <script type="text/javascript" src="./js/dashboard.js"></script>
+    <link rel="stylesheet" href="../css/dashboard-style.css" />
+    <script type="text/javascript" src="../lib/jquery-2.1.0.min.js"></script>
+    <script type="text/javascript" src="../lib/mustache.js"></script>
+    <script type="text/javascript" src="../js/dashboard.js"></script>
 
   </head>
   <body>
@@ -11,13 +12,26 @@
   <header>
     <span class="icon"></span>
     <h1>Dashboard</h1>
-    <span><img src="images/settings.png" class="icon" alt="Settings" /></span>
+    <span><img src="../images/settings.png" class="icon" alt="Settings" /></span>
   </header>
 
+  <script id="interfaces" type="x-tmpl-mustache">
+      <div class="network on">
+        <header>
+          <img src="{{imageSource}}" alt="router-on" class="icon" />
+          <div class="speed">
+            <div class="upload">{{uploadSpeed}}<span> {{uploadSpeedMetric}}</span></div>
+            <div class="download">{{downloadSpeed}}<span> {{downloadSpeedMetric}}</span></div>
+          </div>
+        </header>
+        <div class="title"><h2>{{name}}</h2></div>
+        <div class="status"><span class="on">Connected</span></div>
+      </div>
+  </script>
 
   <section id="main">
 
-
+  <!--
     <div class="network on">
       <header>
         <img src="images/router.png" alt="router-on" class="icon" />
@@ -71,11 +85,13 @@
       <div class="title"><h2>Openwireless.org</h2></div>
       <div class="status"><span class="on">On</span> | <span class="off">Off</span></div>
     </div>
+  -->
+
   </section>
 
   <footer>
     <p>Up to date. Last checked Today June 11, 2014</p>
-    <img src="images/update.png" alt="update" />
+    <img src="../images/update.png" alt="update" />
   </footer>
 </div>
 
