--- a/app/html/dashboard.html
+++ b/app/html/dashboard.html
@@ -2,7 +2,7 @@
   <head>
     <link rel="stylesheet" href="../css/dashboard-style.css" />
     <script type="text/javascript" src="../lib/jquery-2.1.0.min.js"></script>
-    <script type="text/javascript" src="../lib/mustache.js"></script>
+    <script type="text/javascript" src="../lib/handlebars.js"></script>
     <script type="text/javascript" src="../js/dashboard.js"></script>
 
   </head>
@@ -15,7 +15,7 @@
     <span><img src="../images/settings.png" class="icon" alt="Settings" /></span>
   </header>
 
-  <script id="interfaces" type="x-tmpl-mustache">
+  <script id="interface-template" type="text/x-handlebars-template">
       <div class="network on">
         <header>
           <img src="{{imageSource}}" alt="router-on" class="icon" />
@@ -24,7 +24,23 @@
             <div class="download">{{downloadSpeed}}<span> {{downloadSpeedMetric}}</span></div>
           </div>
         </header>
-        <div class="title"><h2>{{name}}</h2></div>
+        <div class="title">
+          <h2>{{name}}</h2>
+          {{#if pingSpeed}} 
+            <div class="ping">{{pingSpeed}}<small> {{pingSpeedMetric}} ping</small></div>
+          {{/if}}
+          {{#if devices}}
+            <div class="devices">{{devices}}<small> devices</small></div>
+          {{/if}}
+          {{#if maxBandwithPercent}}
+            <div class="bandwith">{{maxBandwithPercent}}%<small> max <br> bandwith </small></div>
+          {{/if}}
+          {{#if maxMonthlyBandwith}}
+          <div class="bandwith">{{maxMonthlyBandwith}}<small> {{maxMonthlyBandwithMetric}} max <br> per month </small></div>
+          {{/if}}
+
+        </div>
+
         <div class="status"><span class="on">Connected</span></div>
       </div>
   </script>
@@ -54,7 +70,6 @@
       </header>
       <div class="title">
         <h2>LAN Network</h2>
-        <div class="devices">2 <small>devices</small></div>
       </div>
       <div class="status"></div>
     </div>
