AS add seperate settings views

--- a/app/html/settings.html
+++ b/app/html/settings.html
@@ -18,7 +18,7 @@
 
       <script id="settings-template" type="text/x-handlebars-template">
         <h2>Router</h2>
-        <a href="./changePassword.html">Change Router Credentials - username and password</a>
+        <a href="./changeUsernameAndPassword.html">Change Router Credentials - username and password</a>
         <p>Software Version: {{softwareVersion}}</p>
         <p>Date of version update: {{softwareVersionUpdateDate}}</p>
         <p>Date last checked for update: {{lastCheckedDate}}</p>
@@ -33,8 +33,8 @@
         <br>
 
         <h2>Private Wifi</h2>
-        <p><a href="#">Set network SSID</a></p>
-        <p><a href="#">Set network password</a></p>
+        <p><a href="./changeSSID.html">Set network SSID</a></p>
+        <p><a href="./changeNetworkPassword.html">Set network password</a></p>
         <br>
         <p>Choose band</p>
         <p><span class="selector" id="routerBand">{{routerBand}}</span> ghz</p>
