AS refactor login js

--- a/jasmine/index.html
+++ b/jasmine/index.html
@@ -11,6 +11,7 @@
   <script type="text/javascript" src="lib/jasmine-fixture.min.js"></script>
 
   <!-- include source files here... -->
+  <script type="text/javascript" src="../app/js/request.js" data-cover></script>
   <script type="text/javascript" src="../app/js/login.js" data-cover></script>
   <script type="text/javascript" src="../app/js/ssid.js" data-cover></script>
   <script type="text/javascript" src="../app/js/checkPassword.js" data-cover></script>
