AS move out duplicated code from login js

--- a/app/html/login.html
+++ b/app/html/login.html
@@ -3,8 +3,8 @@
 		<link rel="stylesheet" type="text/css" href="../css/style.css" media="screen" />
     	<script src="../lib/jquery-2.1.0.min.js"></script>
     	<script type="text/javascript" src="../js/request.js"></script>
-
-		<script type="text/javascript" src="../js/login.js"></script>
+    	<script type="text/javascript" src="../js/helper.js"></script>
+      <script type="text/javascript" src="../js/login.js"></script>
 	</head>
 
 	<body>
