--- a/jasmine/index.html
+++ b/jasmine/index.html
@@ -12,15 +12,17 @@
 
   <!-- include source files here... -->
   <script type="text/javascript" src="../app/js/request.js" data-cover></script>
+  <script type="text/javascript" src="../app/js/helper.js" data-cover></script>
   <script type="text/javascript" src="../app/js/login.js" data-cover></script>
   <script type="text/javascript" src="../app/js/ssid.js" data-cover></script>
   <script type="text/javascript" src="../app/js/checkPassword.js" data-cover></script>
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="integration/loginSpec.js"></script>
+  <script type="text/javascript" src="integration/requestSpec.js"></script>
   <script type="text/javascript" src="integration/ssidSpec.js"></script>
   <script type="text/javascript" src="integration/changePasswordSpec.js"></script>
-  <script type="text/javascript" src="unit/genericSpec.js"></script>
+  <script type="text/javascript" src="unit/helperSpec.js"></script>
 
   <script type="text/javascript">
     (function() {
