AS add more ui tweaks

--- a/app/html/dashboard.html
+++ b/app/html/dashboard.html
@@ -1,6 +1,7 @@
 <html>
   <head>
-    <link rel="stylesheet" href="../css/dashboard-style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" >
+    <link rel="stylesheet" href="../css/admin-style.css" />
     <script type="text/javascript" src="../lib/jquery-2.1.0.min.js"></script>
     <script type="text/javascript" src="../lib/handlebars.js"></script>
     <script type="text/javascript" src="../js/dashboard.js"></script>
@@ -12,7 +13,7 @@
   <header>
     <span class="icon"></span>
     <h1>Dashboard</h1>
-    <span><img src="../images/settings.png" class="icon" alt="Settings" /></span>
+    <span><a href="./settings.html"><img src="../images/settings.png" class="icon" alt="Settings" /></a></span>
   </header>
 
   <script id="interface-template" type="text/x-handlebars-template">
