AS add monthyl bandwith usage in dashboard

--- a/app/html/dashboard.html
+++ b/app/html/dashboard.html
@@ -37,7 +37,7 @@
             <div class="bandwith">{{maxBandwithPercent}}%<small> max <br> bandwith </small></div>
           {{/if}}
           {{#if maxMonthlyBandwith}}
-            <div class="bandwith">{{maxMonthlyBandwith}}<small> {{maxMonthlyBandwithMetric}} max <br> per month </small></div>
+          <div class="bandwith">{{monthlyBandwithUsage}} <small>used of</small> {{maxMonthlyBandwith}}<small> {{maxMonthlyBandwithMetric}} max <br> per month </small></div>
           {{/if}}
 
         </div>
