LK fix 'bandwith' typo

--- a/app/html/dashboard.html
+++ b/app/html/dashboard.html
@@ -33,11 +33,11 @@
           {{#if devices}}
             <div class="devices">{{devices}}<small> devices</small></div>
           {{/if}}
-          {{#if maxBandwithPercent}}
-            <div class="bandwith">{{maxBandwithPercent}}%<small> max <br> bandwith </small></div>
+          {{#if maxBandwidthPercent}}
+            <div class="bandwidth">{{maxBandwidthPercent}}%<small> max <br> bandwidth </small></div>
           {{/if}}
-          {{#if maxMonthlyBandwith}}
-          <div class="bandwith">{{monthlyBandwithUsage}} <small>used of</small> {{maxMonthlyBandwith}}<small> {{maxMonthlyBandwithMetric}} max <br> per month </small></div>
+          {{#if maxMonthlyBandwidth}}
+          <div class="bandwidth">{{monthlyBandwidthUsage}} <small>used of</small> {{maxMonthlyBandwidth}}<small> {{maxMonthlyBandwidthMetric}} max <br> per month </small></div>
           {{/if}}
 
         </div>
