AS add padding to admin pages

--- a/app/html/settings.html
+++ b/app/html/settings.html
@@ -23,11 +23,11 @@
         <br>
         <br>
         <h4>Router</h4>
-        <p><a href="./changeUsernameAndPassword.html">Change Router Credentials - username and password</a></p>
+        <p><a href="./changeUsernameAndPassword.html">Change Router Credentials - username and password &gt;</a></p>
         <p>Software Version: {{softwareVersion}}</p>
         <p>Date of version update: {{softwareVersionUpdateDate}}</p>
         <p>Date last checked for update: {{lastCheckedDate}}</p>
-        <p><a href="#">Check for update</a></p>
+        <p><a href="#">Check for update &gt;</a></p>
         <br>
         <br>
 
@@ -39,8 +39,8 @@
         <br>
 
         <h4>Private Wifi</h4>
-        <p><a href="./changeSSID.html">Set network SSID</a></p>
-        <p><a href="./changeNetworkPassword.html">Set network password</a></p>
+        <p><a href="./changeSSID.html">Set network SSID &gt;</a></p>
+        <p><a href="./changeNetworkPassword.html">Set network password &gt;</a></p>
         <br>
         <h4>Choose band</h4>
         <p><span class="selector" id="routerBand">{{routerBand}}</span> ghz</p>
@@ -60,7 +60,7 @@
         <p>*I'm willing to tolerate up to 15% degradation in internet speeds so that I can contribute to openwireless</p>
         <br>
         <p>Maximum total data/month <span class="editable" id="openwirelessData">{{openwirelessData}} gb</span></p>
-        <p><a href="#">Reset total data used this month</a></p>
+        <p><a href="#">Reset total data used this month &gt;</a></p>
         <p>Change data auto-reset date [Datepicker]</p>
         <br>
         <h4>Choose band</h4>
