AS add on-off toggle in dashboard

--- a/app/html/dashboard.html
+++ b/app/html/dashboard.html
@@ -47,7 +47,7 @@
         {{/if}}
 
         {{#if state }}
-          <div class="status"><span class="{{state}}">{{state}}</span></div>
+        <div class="status"><span class="{{state}} on-button">On</span> | <span class="{{state}} off-button">Off</span></div>
         {{/if}}
 
       </div>
