AS add logic to  change username and password page

--- a/app/html/changePassword.html
+++ b/app/html/changePassword.html
@@ -2,8 +2,11 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="../css/style.css" media="screen" />
-    <script src="../lib/jquery-2.1.0.min.js"></script>
-		<script type="text/javascript" src="../js/checkPassword.js"></script>
+    	<script src="../lib/jquery-2.1.0.min.js"></script>
+    	<script type="text/javascript" src="../js/security.js"></script>
+    	<script type="text/javascript" src="../js/helper.js"></script>
+    	<script type="text/javascript" src="../js/request.js"></script>
+		<script type="text/javascript" src="../js/changePassword.js"></script>
 	</head>
 	<body>
 		<div id="outerContainer">
