--- a/jasmine/index.html
+++ b/jasmine/index.html
@@ -11,17 +11,22 @@
   <script type="text/javascript" src="lib/jasmine-fixture.min.js"></script>
 
   <!-- include source files here... -->
+  <script type="text/javascript" src="../app/js/security.js" data-cover></script>
   <script type="text/javascript" src="../app/js/request.js" data-cover></script>
   <script type="text/javascript" src="../app/js/helper.js" data-cover></script>
   <script type="text/javascript" src="../app/js/login.js" data-cover></script>
   <script type="text/javascript" src="../app/js/ssid.js" data-cover></script>
-  <script type="text/javascript" src="../app/js/checkPassword.js" data-cover></script>
+  <script type="text/javascript" src="../app/js/changePassword.js" data-cover></script>
+  <script type="text/javascript" src="../app/js/changeUsernameAndPassword.js" data-cover></script>
+
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="integration/loginSpec.js"></script>
   <script type="text/javascript" src="integration/requestSpec.js"></script>
   <script type="text/javascript" src="integration/ssidSpec.js"></script>
   <script type="text/javascript" src="integration/changePasswordSpec.js"></script>
+  <script type="text/javascript" src="integration/changeUsernameAndPasswordSpec.js"></script>
+
   <script type="text/javascript" src="unit/helperSpec.js"></script>
 
   <script type="text/javascript">
