--- a/app/html/changeUsernameAndPassword.html
+++ b/app/html/changeUsernameAndPassword.html
@@ -3,7 +3,10 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="../css/style.css" media="screen" />
     <script src="../lib/jquery-2.1.0.min.js"></script>
-		<!-- <script type="text/javascript" src="../js/checkPassword.js"></script> -->
+    <script type="text/javascript" src="../js/request.js"></script>
+    <script type="text/javascript" src="../js/security.js"></script>
+    <script type="text/javascript" src="../js/helper.js"></script>
+	<script type="text/javascript" src="../js/changeUsernameAndPassword.js"></script>
 	</head>
 	<body>
 		<div id="outerContainer">
