JR & LK - user can toggle private wifi and openwireless on/off - refreshes pag & submits request, not yet implemented on backend

--- a/app/html/dashboard.html
+++ b/app/html/dashboard.html
@@ -4,6 +4,8 @@
     <link rel="stylesheet" href="../css/admin-style.css" />
     <script type="text/javascript" src="../lib/jquery-2.1.0.min.js"></script>
     <script type="text/javascript" src="../lib/handlebars.js"></script>
+    <script type="text/javascript" src="../js/security.js"></script>
+    <script type="text/javascript" src="../js/request.js"></script>
     <script type="text/javascript" src="../js/dashboard.js"></script>
 
   </head>
@@ -47,7 +49,7 @@
         {{/if}}
 
         {{#if state }}
-        <div class="status"><span class="{{state}} on-button">On</span> | <span class="{{state}} off-button">Off</span></div>
+        <div class="status toggle" id="{{stateId}}"><span class="{{state}} on-button">On</span> | <span class="{{state}} off-button">Off</span></div>
         {{/if}}
 
       </div>
