--- a/app/html/settings.html
+++ b/app/html/settings.html
@@ -6,7 +6,9 @@
     <script type="text/javascript" src="../lib/handlebars.js"></script>
 
     <script type="text/javascript" src="../lib/jeditable.js"></script>
-    <script type="text/javascript" src="../js/security.js"></script><script type="text/javascript" src="../js/request.js"></script>
+    <script type="text/javascript" src="../js/security.js"></script>
+    <script type="text/javascript" src="../js/request.js"></script>
+    <script type="text/javascript" src="../js/helper.js"></script>
     <script type="text/javascript" src="../js/settings.js"></script>
   </head>
   <body>
