--- a/app/html/setSSID.html
+++ b/app/html/setSSID.html
@@ -2,7 +2,8 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="../css/style.css" media="screen" />
     <script src="../lib/jquery-2.1.0.min.js"></script>
-		<script type="text/javascript" src="../js/ssid.js"></script>
+        <script type="text/javascript" src="../js/request.js"></script>
+        <script type="text/javascript" src="../js/ssid.js"></script>
 	</head>
 
 	<body>
