[Stephen & Justin] Minified js files and deleted d3 folder

--- a/app/html/dashboard.html
+++ b/app/html/dashboard.html
@@ -3,7 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" >
     <link rel="stylesheet" href="../css/admin-style.css" />
     <script type="text/javascript" src="../lib/jquery-2.1.0.min.js"></script>
-    <script type="text/javascript" src="../lib/handlebars.js"></script>
+    <script type="text/javascript" src="../lib/handlebars.min.js"></script>
     <script type="text/javascript" src="../js/security.js"></script>
     <script type="text/javascript" src="../js/request.js"></script>
     <script type="text/javascript" src="../js/dashboard.js"></script>
