--- a/app/html/monitoring.html
+++ b/app/html/monitoring.html
@@ -2,7 +2,7 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="../css/style.css" media="screen" />
     	<script src="../lib/jquery-2.1.0.min.js"></script>
-    	<script type="text/javascript" src="../lib/d3/d3.min.js"></script>
+    	<script type="text/javascript" src="../lib/d3.min.js"></script>
 		<script type="text/javascript" src="../js/monitoring.js"></script>
 	</head>
 
