--- a/app/html/settings.html
+++ b/app/html/settings.html
@@ -3,9 +3,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" >
     <link rel="stylesheet" type="text/css" href="../css/admin-style.css" media="screen" />
     <script src="../lib/jquery-2.1.0.min.js"></script>
-    <script type="text/javascript" src="../lib/handlebars.js"></script>
+    <script type="text/javascript" src="../lib/handlebars.min.js"></script>
 
-    <script type="text/javascript" src="../lib/jeditable.js"></script>
+    <script type="text/javascript" src="../lib/jeditable.min.js"></script>
     <script type="text/javascript" src="../js/security.js"></script>
     <script type="text/javascript" src="../js/request.js"></script>
     <script type="text/javascript" src="../js/helper.js"></script>
